# HidBridge

./: .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  LICENSE  README.md  ROADMAP.md  docker-compose.platform-runtime.yml  docker-compose.postgis.yml  run_all_tests.ps1
A_device/: hid_proxy_dev.h  main.c  remote_storage.c  tusb_config.h  usb_descriptors.h
B_host/: control_uart.c  hid_host.h  hid_proxy_host.h  string_manager.c
Docs/: EXP022_BACKLOG_P0_P1_P2_EN.md  EXP022_BACKLOG_P0_P1_P2_UA.md  EXP022_SRS_IMPLEMENTATION_PLAN_EN.md  EXP022_SRS_IMPLEMENTATION_PLAN_UA.md  EXP022_SYSTEM_CONCLUSIONS_EN.md  EXP022_SYSTEM_CONCLUSIONS_UA.md  EXP022_TUNING_MATRIX_UA_EN.md  MIGRATION_EN.md  MIGRATION_UA.md  MediaArchitectureDecision.md  MediaStackShortlist.md  RELEASE_NOTES_2026-02-19.md  StreamCoreV2.md  StreamCoreV2_CleanArchitecture.md  quick_start_remote.md  rapo_orig_1.json  rapo_orig_1.pcapng  rapo_orig_2.pcapng  rapo_proxy_1.json  rapo_proxy_1.pcapng  rapo_proxy_2.pcapng  rapoo_orig.txt  rapoo_orig_3.pcapng  rapoo_orig_3.txt  rapoo_proxy.txt  rapoo_proxy_2.txt  text_input_i18n.md  turn_setup.md  uart_control_protocol.md  video_pipeline_plan.md  video_streams.md  webrtc_control_peer.md  webrtc_signaling.md  webrtc_signaling_paths.md  webrtc_video_peer.md  ws_control_protocol.md
Firmware/src/: CMakeLists.txt
Firmware/src/A_device/: hid_proxy_dev.c  remote_storage.h  usb_descriptors.c
Firmware/src/B_host/: control_uart.h  descriptor_logger.c  hid_proxy_host.c  main.c  string_manager.c
Firmware/src/common/: i2c_slave.c  sha256.c  sha256.h
(+835 files in other folders)
